--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,7 +40,7 @@
     </div>
 
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504542.689731145!2d3.0369835365222007!3d52.191736072303364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c3db87e4bb%3A0xb3a175ceffbd0a9f!2sNetherlands!5e0!3m2!1sen!2s!4v1679730003218!5m2!1sen!2s"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.9621719364427!2d7.03984791587853!3d53.03901717991576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b7cf09a915b723%3A0xbd90b8aa34bdea01!2sLuringstraat%2010%2C%209591%20BD%20Onstwedde%2C%20Netherlands!5e0!3m2!1sen!2s!4v1679745649825!5m2!1sen!2s"
       width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
