--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,5 @@
 {{ define "main" }}
-<article class="px-6 mx-auto mb-16 prose text-gray-700 justify-self-center sm:px-4 md:px-0 lg:prose-lg">
-    <h1>{{ .Title }}</h1>
+<article class="py-20 container prose-lg prose-yellow text-gray-800">
     {{ .Content }}
 </article>
 {{ end }}
