--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,14 @@
     </div>
     {{ end }}
   </div>
+
+
+
   <div class="max-w-screen-md mx-auto space-y-8">
+
+    Add reviews here...
+
+    <!-- 
     <div class="flex gap-2 items-center">
       <span class="text-6xl text-yellow-400">5.0</span>
       <span class="">
@@ -78,8 +85,8 @@
       {{ end }}
 
     </div>
+  -->
   </div>
-
 </div>
 {{ end }}
 
