--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,7 +46,8 @@
 
   <div class="max-w-screen-md mx-auto space-y-8">
 
-    Add reviews here...
+    <script src="https://cdn.salonized.com/widget.js" data-name="salonized" data-microsite-url="https://echika-trading.salonized.com"></script>
+<div class="salonized-reviews"></div>
 
     <!-- 
     <div class="flex gap-2 items-center">
