--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -35,7 +35,7 @@
   <br><br><br><br><br>
   <div class="container flex justify-center py-4">
     <a href="{{ .Site.Home.Permalink}}">
-      <img src="/logo.svg" alt="logo" class="w-48 h-48">
+      <img src="/hair-salon.png" alt="logo" class="w-48 h-48">
       {{/* {{ .Site.Title }} */}}
     </a>
   </div>
