--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="text-white py-4 relative bg-black">
   <div class="absolute left-0 top-0 w-full h-full" 
-  style="background: url(/{{((.Resources.GetMatch .Params.image))}}) no-repeat;background-size:cover;"></div>
+  style="background: url(/{{((.Resources.GetMatch .Params.image))}}) no-repeat;background-position-y:bottom;"></div>
   <div class="container flex justify-between items-center relative">
     <div class="">
       <ul class="flex gap-2 lg:gap-4">
