--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -37,7 +37,7 @@
   <br><br><br><br><br>
   <div class="container flex justify-center py-4 relative">
     <a href="{{ .Site.Home.Permalink}}">
-      <img src="/logo.svg" alt="logo" class="w-48 h-48">
+      <img src="/salon-echika.png" alt="logo" class="w-48 h-48">
       {{/* {{ .Site.Title }} */}}
     </a>
   </div>
