--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -35,7 +35,7 @@
     </button>
   </div>
   <br><br><br><br><br>
-  <div class="container flex justify-center py-4 relative">
+  <div class="container flex sm:justify-center py-4 relative">
     <a href="{{ .Site.Home.Permalink}}">
       <img src="/salon-echika.png" alt="logo" class="w-60">
       {{/* {{ .Site.Title }} */}}
