--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,4 +41,15 @@
       {{/* {{ .Site.Title }} */}}
     </a>
   </div>
+<script type="text/javascript">
+window.Trengo = window.Trengo || {};
+window.Trengo.key = '2l1Z6zujwZTwXqBaBfKI';
+(function(d, script, t) {
+    script = d.createElement('script');
+    script.type = 'text/javascript';
+    script.async = true;
+    script.src = 'https://static.widget.trengo.eu/embed.js';
+    d.getElementsByTagName('head')[0].appendChild(script);
+}(document));
+</script>  
 </header>
