--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -51,5 +51,7 @@ window.Trengo.key = '2l1Z6zujwZTwXqBaBfKI';
     script.src = 'https://static.widget.trengo.eu/embed.js';
     d.getElementsByTagName('head')[0].appendChild(script);
 }(document));
-</script>  
+</script>
+  
+ <div class="salonized-booking" data-company="TkzW1QHX7E264iSmCZXoHNDs" data-color="#404043" data-language="nl" data-height="700" data-position="left" data-outline="shadow"></div><script src="https://static-widget.salonized.com/loader.js"></script> 
 </header>
