--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -37,7 +37,7 @@
   <br><br>
   <div class="container flex sm:justify-center py-4 relative">
     <a href="{{ .Site.Home.Permalink}}">
-      <img src="/salon-echika.png" alt="logo" class="w-60">
+      <img src="/salon-logot.png" alt="logo" class="w-60">
       {{/* {{ .Site.Title }} */}}
     </a>
   </div>
