--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
         <li>
           <a href="{{.URL}}" target="_blank">
             <span class="sr-only">{{ .Name }}</span>
-            <img src="/{{.Pre}}" alt="" class="w-6 lg:w-8 h-8">
+            <img src="/{{.Pre}}" alt="" class="w-6 h-6 lg:w-8 lg:h-8">
           </a>
         </li>
         {{ end -}}
