--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
       </ul>
     </div>
     <nav id="mainnav"
-      class="fixed lg:static bg-black bg-opacity-50 pt-12 lg:pt-0 shadow-xl lg:shadow-none w-full lg:w-auto left-0 top-0 transform -translate-y-full lg:translate-y-0 transition">
+      class="z-10 fixed lg:static bg-black bg-opacity-50 pt-12 lg:pt-0 shadow-xl lg:shadow-none w-full lg:w-auto left-0 top-0 transform -translate-y-full lg:translate-y-0 transition">
       <ul class="lg:flex lg:text-lg">
         {{ range .Site.Menus.main -}}
         <li>
